Contact infomration Update

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
                     <div class="contact-icon">📧</div>
                     <div class="contact-details">
                         <h4>Email</h4>
-                        <p>your.email@university.edu</p>
+                        <p>sebastian.alvez@university.edu</p>
                     </div>
                 </div>
                 
@@ -17,7 +17,7 @@
                     <div class="contact-icon">📱</div>
                     <div class="contact-details">
                         <h4>Phone</h4>
-                        <p>(555) 123-4567</p>
+                        <p>(201) 772-2622</p>
                     </div>
                 </div>
                 
@@ -33,7 +33,7 @@
                     <div class="contact-icon">💼</div>
                     <div class="contact-details">
                         <h4>LinkedIn</h4>
-                        <p>linkedin.com/in/yourprofile</p>
+                        <p>linkedin.com/in/sebastian-alvez</p>
                     </div>
                 </div>
             </div>
