--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Biomedical Engineer Portfolio</title>
+    <title>Sebastian Alvez - Biomedical Engineer Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -198,7 +198,7 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo">Your Name</div>
+            <div class="logo">Sebastian Alvez</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -211,7 +211,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-card">
-                    <h1>Your Name</h1>
+                    <h1>Sebastian Alvez</h1>
                     <div class="title">Biomedical Engineer</div>
                     <p class="tagline">Innovating at the intersection of healthcare and technology to improve patient outcomes and advance medical research</p>
                     <div class="btn-group">
