--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,18 @@
         <div class="projects-grid">
     <div class="project-card">
         <div class="project-image">
-            <div class="placeholder-image">🧬</div>
+            <div class="placeholder-image">
+    <svg width="80" height="80" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M9 3C9 4.10457 8.10457 5 7 5C5.89543 5 5 4.10457 5 3C5 1.89543 5.89543 1 7 1C8.10457 1 9 1.89543 9 3Z" fill="white" opacity="0.9"/>
+        <path d="M19 3C19 4.10457 18.1046 5 17 5C15.8954 5 15 4.10457 15 3C15 1.89543 15.8954 1 17 1C18.1046 1 19 1.89543 19 3Z" fill="white" opacity="0.9"/>
+        <path d="M14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12Z" fill="white" opacity="0.9"/>
+        <path d="M9 21C9 22.1046 8.10457 23 7 23C5.89543 23 5 22.1046 5 21C5 19.8954 5.89543 19 7 19C8.10457 19 9 19.8954 9 21Z" fill="white" opacity="0.9"/>
+        <path d="M19 21C19 22.1046 18.1046 23 17 23C15.8954 23 15 22.1046 15 21C15 19.8954 15.8954 19 17 19C18.1046 19 19 19.8954 19 21Z" fill="white" opacity="0.9"/>
+        <path d="M7 5L7 19" stroke="white" stroke-width="2" opacity="0.7"/>
+        <path d="M17 5L17 19" stroke="white" stroke-width="2" opacity="0.7"/>
+        <path d="M7 12L17 12" stroke="white" stroke-width="2" opacity="0.7"/>
+    </svg>
+</div>
         </div>
         <div class="project-content">
             <h3>Cartilage Regeneration Scaffold</h3>
@@ -26,7 +37,12 @@
 
     <div class="project-card">
         <div class="project-image">
-            <div class="placeholder-image">❤️</div>
+            <div class="placeholder-image">
+    <svg width="80" height="80" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M12 2L15.09 8.26L22 9.27L17 14.14L18.18 21.02L12 17.77L5.82 21.02L7 14.14L2 9.27L8.91 8.26L12 2Z" fill="white" opacity="0.9"/>
+        <path d="M12 6L13.5 10L17.5 10.5L14.5 13.5L15.5 17.5L12 15.5L8.5 17.5L9.5 13.5L6.5 10.5L10.5 10L12 6Z" fill="white" opacity="0.7"/>
+    </svg>
+</div>
         </div>
         <div class="project-content">
             <h3>Cardiovascular Stent Optimization</h3>
@@ -51,7 +67,13 @@
 
     <div class="project-card">
         <div class="project-image">
-            <div class="placeholder-image">🧠</div>
+            <div class="placeholder-image">
+    <svg width="80" height="80" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="12" cy="12" r="10" stroke="white" stroke-width="2" opacity="0.9" fill="none"/>
+        <path d="M12 6V12L16 14" stroke="white" stroke-width="2" opacity="0.7" stroke-linecap="round"/>
+        <circle cx="12" cy="12" r="3" fill="white" opacity="0.5"/>
+    </svg>
+</div>
         </div>
         <div class="project-content">
             <h3>EEG Signal Processing Algorithm</h3>
@@ -76,7 +98,13 @@
 
     <div class="project-card">
         <div class="project-image">
-            <div class="placeholder-image">🦴</div>
+            <div class="placeholder-image">
+    <svg width="80" height="80" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect x="4" y="6" width="16" height="12" rx="2" stroke="white" stroke-width="2" opacity="0.9" fill="none"/>
+        <path d="M8 10H16M8 14H16" stroke="white" stroke-width="2" opacity="0.7" stroke-linecap="round"/>
+        <circle cx="6" cy="8" r="1" fill="white" opacity="0.8"/>
+    </svg>
+</div>
         </div>
         <div class="project-content">
             <h3>Smart Orthopedic Implant</h3>
